--- a/assets/jupyter/blog.ipynb
+++ b/assets/jupyter/blog.ipynb
@@ -2,34 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "sys.version_info(major=3, minor=6, micro=2, releaselevel='final', serial=0)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1\n"
+     ]
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.version_info"
+    "import socket\n",
+    "\n",
+    "def get_ip_address():\n",
+    "    s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n",
+    "    s.connect((\"localhost\", 80))\n",
+    "    return s.getsockname()[0]\n",
+    "\n",
+    "print(get_ip_address())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
+    "name": "python3",
    "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "language": "python"
   },
+  "name": "Test",
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -40,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
